test/fixtures/fail/number_leading_dot.l4gs.g
; A number literal must begin with a digit — `.5` is not accepted
; (the token is parsed as an identifier `.5`, which is undefined).
        dq .5
